# agentic-wallet

./: -  .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  SKILLS.md  eslint.config.mjs  package-lock.json  package.json  plan.md  task.md  tmp-mpl-test.ts  tsconfig.base.json
.github/workflows/: ci.yml
apps/api-gateway/: package.json
apps/api-gateway/src/: index.ts
apps/cli/: package.json
apps/cli/src/: banner.ts  index.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEEP_DIVE.md  DEMO_RESULTS.md  OPERATIONS_RUNBOOK.md  PROTOCOLS_AND_INTENTS.md  README.md  SECURITY.md  TESTING_AND_VALIDATION.md
infrastructure/kora/: kora.toml
programs/escrow/: Cargo.toml  README.md
programs/escrow/src/: lib.rs
scripts/: adapter-migration-check.ts  chaos-failure-injection.ts  demo-judge.ts  devnet-multi-agent-load.ts  devnet-multi-agent.ts  devnet-protocol-matrix.ts  devnet-smoke.ts  escrow-deploy-devnet.mjs  escrow-sync-program-id.mjs  intent-runner.ts  patch-rpc-websockets-compat.mjs  policy-migration-check.ts  protocol-exec-sweep.ts  secret-scan.ts  wallets.ts
services/agent-runtime/: package.json
services/agent-runtime/src/: index.ts
services/agent-runtime/tests/: decision-engine.test.ts
services/audit-observability/: package.json
services/audit-observability/src/: index.ts
services/mcp-server/: package.json
services/mcp-server/src/: index.ts
services/policy-engine/: package.json  vitest.config.ts
services/protocol-adapters/: package.json
services/transaction-engine/: package.json
services/wallet-engine/: package.json
(+138 files in other folders)
